--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -51,11 +51,13 @@ body {
 
 #team-logo {
 	margin: 20px 0px;
-	@media (max-width: @screen-md-min) {
-		width: 200px;
-	}
-	@media (max-width: @screen-sm-min) {
-		width: 140px;
+	img {
+		@media (max-width: @screen-md-min) {
+			width: 200px;
+		}
+		@media (max-width: @screen-sm-min) {
+			width: 140px;
+		}
 	}
 }
 
